    kacpimon/makefile proc.h sock.h)
    (Cristian Rodriguez)
  - Fixes to many build warnings uncovered by new gcc settings from autoconf.
    (inotify_handler.c input_layer.c kacpimon/acpi_ids.c kacpimon/acpi_ids.h 
    kacpimon/connection_list.c kacpimon/connection_list.h 
    kacpimon/input_layer.c kacpimon/kacpimon.c kacpimon/netlink.c netlink.c
    proc.c sock.c)
    (Ted Felix)

* Thu Dec 15 2011  Ted Felix <http://www.tedfelix.com>
  - 2.0.14 release
  - Fixed brace style.  (inotify_handler.c acpid.c)  (Ted Felix)
  - Added support for a "K" suffix on event strings to indicate that they
    may have originated from a keyboard input layer device.  This can be
    used to differentiate between a power switch on the keyboard, and a power
    switch on the computer's case.
    
    (connection_list.h inotify_handler.c input_layer.c netlink.c proc.c
    sock.c)  (Ted Felix)
    
  - Added a pathname to connection along with a find_connection_name().  
    Modifications to process_inotify() to log IN_DELETE events.  Additional 
    debugging output.
      
    These changes were experimentation related to dealing with a ThinkPad 
    suspend problem.  They should have no effect on acpid's behavior.  They are 
    mainly noticeable as a change in the logging.
    
    The Problem: When resuming from suspend, the lid switch and power button's 
    /dev/input event files do not trigger an IN_CREATE, so acpid doesn't 
    reconnect to them.  Restarting acpid fixes this.
    
    Tried using IN_DELETE instead of ENODEV to detect the drivers going away.
    Worked fine for disconnecting/reconnecting a USB keyboard, but not for the
    ThinkPad suspend problem.  I've given up on fixing this as it appears to be
    a kernel or driver issue.
    
    (connection_list.c connection_list.h inotify_handler.c input_layer.c 
    netlink.c proc.c sock.c)  (Ted Felix)
      
* Tue Nov 15 2011  Ted Felix <http://www.tedfelix.com>
  - 2.0.13 release